syntax = "proto3";

option go_package = "gen/";
option java_multiple_files = true;
option java_package = "nuzurextension";
option java_outer_classname = "NuzurExtension";

service NuzurExtension {
    rpc GetMetadata(GetMetadataRequest) returns (GetMetadataResponse) {}
    rpc StartExecution(StartExecutionRequest) returns (StartExecutionResponse) {}
    rpc SubmitExectuionStep(SubmitExectuionStepRequest) returns (SubmitExectuionStepResponse) {}
    rpc GetExecution(GetExecutionRequest) returns (GetExecutionResponse) {}
}



// start metadata 
message GetMetadataRequest {
    string locale = 1;
}

message GetMetadataResponse {
    string uuid = 1;
    string version_uuid = 2;
    string identifier = 3;
    string display_name = 4;        
    string description = 5;
    int32 numberOfSteps = 6;
}

// end metadata 


// start startexec
message StartExecutionRequest {
    string project_uuid = 1;
    string project_version_uuid = 2;
    string project_extension_uuid = 3;     // for automatic extension execution   
    string config_values = 4; // for manual extensionexecution
    string locale = 5;
}

enum ExecutionResponseType {
    EXECUTION_RESPONSE_TYPE_INVALID = 0;
    EXECUTION_RESPONSE_TYPE_FINAL = 1;
    EXECUTION_RESPONSE_TYPE_STEP = 2;
    EXECUTION_RESPONSE_TYPE_ASYNC = 3;
}

enum ExecutionStatus {
    EXECUTION_STATUS_INVALID = 0;
    EXECUTION_STATUS_INPROGRESS = 1;
    EXECUTION_STATUS_SUCCEEDED = 2;    
    EXECUTION_STATUS_FAILED = 3;
    EXECUTION_STATUS_CANCELLED = 4;
}

enum ExecutionStepType {
    EXECUTION_STEP_TYPE_INVALID = 0;
    EXECUTION_STEP_TYPE_CONFIRMATION = 1;
    EXECUTION_STEP_TYPE_DATAREQUEST = 2;
    EXECUTION_STEP_TYPE_DATAREQUEST_AND_CONFIRMATION = 3;
}

message StartExecutionResponse {
    string execution_uuid = 1;
    ExecutionResponseType type = 2;
    ExecutionResponseTypeData data = 3;
}

message ExecutionResponseTypeData {
    ExecutionResponseTypeFinalData final = 1;
    ExecutionResponseTypeStepData step = 2;
}

message ExecutionResponseTypeFinalData {
    ExecutionStatus status = 1;
    string status_message = 2;
    string file_download_url = 3;
    repeated ExecutionResponseDisplayBlock display_blocks = 4;
}

message ExecutionResponseTypeStepData {
    string step_identifier = 1;
    ExecutionStepType type = 2;
    ExecutionResponseDisplayBlock display_block = 3;
    repeated ExtensionInputField inputs_fields = 4;
}

message ExecutionResponseDisplayBlock {
    string identifier = 1;
    string title = 2;
    string description = 3;
    string content = 4;
}

// end startexec


// start submit step 
message SubmitExectuionStepRequest {
    string step_identifier = 1;
    bool confrimed = 2;
    repeated ExecutionStepDataInputValue input_values = 3;
    string locale = 4;
}

message ExecutionStepDataInputValue {
    string identifier = 1;
    string value = 2;
}

message SubmitExectuionStepResponse {
    string execution_uuid = 1;
    ExecutionResponseType type = 2;
    ExecutionResponseTypeData data = 3;
}
// end submit step 


// start get exec
message GetExecutionRequest {
    string execution_uuid = 1;
    string locale = 2;
}

message GetExecutionResponse {
    ExecutionStatus status = 1;
    string status_msg = 2;
    ExecutionResponseType type = 3;
    ExecutionResponseTypeData data = 4; 
    string time_elapsed = 5;
    string estimated_time_remaining = 6;
    string current_step_identifier = 7; 
}
// end get exec


// start configuration entity 
message ExtensionConfigurationEntity {
    string version = 1;
    repeated ExtensionInputField fields = 2;
}

enum ExtensionInputType {
    EXTENSION_INPUT_TYPE_INVALID = 0;
    EXTENSION_INPUT_TYPE_UUID = 1;
    EXTENSION_INPUT_TYPE_INTEGER = 2;
    EXTENSION_INPUT_TYPE_FLOAT = 3;    
    EXTENSION_INPUT_TYPE_BOOLEAN = 4;
    EXTENSION_INPUT_TYPE_STRING = 5;
    EXTENSION_INPUT_TYPE_DATE = 6;
    EXTENSION_INPUT_TYPE_DATETIME = 7;
    EXTENSION_INPUT_TYPE_ENUM = 8;
    EXTENSION_INPUT_TYPE_ARRAY = 9;
}

message ExtensionInputField {
    string uuid = 1;
    string identifier = 2;
    string display_name = 3;
    string description = 4;
    bool required = 5;  
    ExtensionInputType type = 6;
    ExtensionInputTypeConfig type_config = 7;
}

message ExtensionInputTypeConfig {
    ExtensionInputTypeUUIDConfig uuid = 1;
    ExtensionInputTypeEnumConfig enum = 2;
    ExtensionInputTypeArrayConfig array = 3;
}

message ExtensionInputTypeUUIDConfig {    
    ProjectEntityType project_entity_type = 1; 
}

message ExtensionInputTypeEnumConfig {
    bool allow_multiple = 1;  
    repeated ExtensionInputEnumOption options = 2;
}

message ExtensionInputTypeArrayConfig {    
    ExtensionInputType array_type = 1;
    ExtensionInputTypeConfig array_type_config = 2;
}

enum ProjectEntityType { 
    PROJECT_ENTITY_TYPE_INVALID = 0;
    PROJECT_ENTITY_TYPE_ENTITY_ALL = 1;
    PROJECT_ENTITY_TYPE_ENTITY_STANDALONE = 2;
    PROJECT_ENTITY_TYPE_ENTITY_DEPENDANT = 3;
    PROJECT_ENTITY_TYPE_RELATIONSHIP = 4;
    PROJECT_ENTITY_TYPE_FIELD = 5;
    PROJECT_ENTITY_TYPE_ENUM = 6;
    PROJECT_ENTITY_TYPE_INDEX = 7;
}

message ExtensionInputEnumOption {
    string identifier = 1;
    string value = 2;
}

// end configuration entity 





